# DualBootPatcher

./: CMakeLists.txt
Android_GUI/: build.gradle.in
Android_GUI/src/com/github/chenxiaolong/dualbootpatcher/: MainApplication.java
Android_GUI/src/com/github/chenxiaolong/dualbootpatcher/nativelib/: LibC.java  LibMbp.java
Android_GUI/src/com/github/chenxiaolong/dualbootpatcher/patcher/: PatchFileFragment.java  PatchFileItem.java  PatcherOptionsDialog.java  PatcherService.java  PatcherUtils.java
Android_GUI/src/com/github/chenxiaolong/dualbootpatcher/switcher/: SwitcherUtils.java
Android_GUI/src/com/github/chenxiaolong/dualbootpatcher/switcher/service/: BootUIActionTask.java  CreateRamdiskUpdaterTask.java
android/: CMakeLists.txt
cmake/: ConfigAndroidApp.cmake  Dependencies.cmake  Swig.cmake
cmake/dependencies/: jsoncpp.cmake  swig.cmake
cmake/modules/: FindJsonCpp.cmake
devicesgen/: devicesgen.cpp
examples/: libmbp_test.cpp
gui/: mainwindow.cpp  mainwindow_p.h
libmbcommon/: CMakeLists.txt
libmbcommon/include/mbcommon/: string.h
libmbcommon/src/: string.cpp
libmbcommon/swig/mbcommon/: mbcommon.i
libmbdevice/: CMakeLists.txt
libmbdevice/include/mbdevice/: device.h  flags.h  json.h
libmbdevice/src/: device.cpp  json.cpp
libmbdevice/swig/mbdevice/: mbdevice.i
libmbdevice/tests/: test_device.cpp  test_json.cpp
libmbp/: CMakeLists.txt
libmbp/include/mbp/: fileinfo.h  patcherconfig.h
libmbp/include/mbp/cwrapper/: cfileinfo.h
libmbp/src/: fileinfo.cpp
libmbp/src/autopatchers/: standardpatcher.cpp
libmbp/src/cwrapper/: cfileinfo.cpp
libmbp/src/patchers/: multibootpatcher.cpp  odinpatcher.cpp  ramdiskupdater.cpp
libmbp/swig/mbp/: mbp.i
mbbootui/: CMakeLists.txt  data.cpp  main.cpp  twrp-functions.cpp
mbbootui/config/: config.cpp  config.hpp
mbbootui/gui/: blanktimer.cpp  gui.cpp  pages.cpp
mbbootui/minuitwrp/: events.cpp  graphics.cpp  resources.cpp
mbbootui/minuitwrp/backend/: backend_adf.cpp  backend_drm.cpp  backend_fbdev.cpp  backend_overlay.cpp
mbtool/: CMakeLists.txt  daemon_v3.cpp  emergency.cpp  init.cpp  installer.cpp  installer.h  mount_fstab.cpp  mount_fstab.h  rom_installer.cpp  switcher.cpp  utilities.cpp
odinupdater/: CMakeLists.txt  odinupdater.cpp
swigcommon/: CMakeLists.txt
swigcommon/swig/swigcommon/: swigcommon.i
swigcommon/swig/swigcommon/style/: java.i
